fix inline alignment

--- a/packages/core/src/components/forms/_form-group.scss
+++ b/packages/core/src/components/forms/_form-group.scss
@@ -3,6 +3,7 @@
 
 @import "../../common/variables";
 @import "../../common/mixins";
+@import "common";
 
 /*
 Form groups
@@ -11,17 +12,17 @@ Markup:
 <div class="#{$ns}-form-group {{.modifier}}">
   <label class="#{$ns}-label" for="form-group-input">
     Label
-      <span class="#{$ns}-text-muted">(required)</span>
-    </label>
-    <div class="#{$ns}-form-content">
+    <span class="#{$ns}-text-muted">(required)</span>
+  </label>
+  <div class="#{$ns}-form-content">
     <div class="#{$ns}-input-group {{.modifier}}">
-        <span class="#{$ns}-icon #{$ns}-icon-calendar"></span>
+      <span class="#{$ns}-icon #{$ns}-icon-calendar"></span>
       <input id="form-group-input" type="text" {{:modifier}} class="#{$ns}-input"
              style="width: 200px;" placeholder="Placeholder text" dir="auto" />
-      </div>
-      <div class="#{$ns}-form-helper-text">Please enter a value</div>
     </div>
+    <div class="#{$ns}-form-helper-text">Please enter a value</div>
   </div>
+</div>
 
 :disabled - Disable the input.
 .#{$ns}-disabled - Disabled styles. Input must be disabled separately via attribute.
@@ -41,7 +42,7 @@ Styleguide form-group
   }
 
   .#{$ns}-control {
-    margin-top: $pt-grid-size / 2;
+    margin-top: ($pt-input-height - $control-indicator-size) / 2;
   }
 
   .#{$ns}-form-helper-text {
@@ -61,7 +62,7 @@ Styleguide form-group
 
   &.#{$ns}-inline {
     flex-direction: row;
-    align-items: baseline;
+    align-items: flex-start;
 
     &.#{$ns}-large label.#{$ns}-label {
       margin: 0 $pt-grid-size 0 0;
